hw6/src/parser.output
Terminals unused in grammar

    MK_DOT
    ERROR


State 227 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list
    2        | %empty

    3 global_decl_list: global_decl_list global_decl
    4                 | global_decl

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | VOID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | ID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

   13 param_list: param_list MK_COMMA param
   14           | param

   15 param: type ID
   16      | ID ID
   17      | type ID dim_fn
   18      | ID ID dim_fn

   19 dim_fn: MK_LB expr_null MK_RB
   20       | dim_fn MK_LB expr MK_RB

   21 expr_null: expr
   22          | %empty

   23 block: decl_list stmt_list
   24      | stmt_list
   25      | decl_list
   26      | %empty

   27 decl_list: decl_list decl
   28          | decl

   29 decl: type_decl
   30     | var_decl

   31 type_decl: TYPEDEF type id_list MK_SEMICOLON
   32          | TYPEDEF VOID id_list MK_SEMICOLON
   33          | TYPEDEF ID id_list MK_SEMICOLON

   34 var_decl: type init_id_list MK_SEMICOLON
   35         | ID init_id_list MK_SEMICOLON

   36 type: INT
   37     | FLOAT

   38 id_list: ID
   39        | id_list MK_COMMA ID
   40        | id_list MK_COMMA ID dim_decl
   41        | ID dim_decl

   42 dim_decl: MK_LB cexpr MK_RB
   43         | dim_decl MK_LB cexpr MK_RB

   44 cexpr: cexpr OP_PLUS mcexpr
   45      | cexpr OP_MINUS mcexpr
   46      | mcexpr

   47 mcexpr: mcexpr OP_TIMES cfactor
   48       | mcexpr OP_DIVIDE cfactor
   49       | cfactor

   50 cfactor: CONST
   51        | MK_LPAREN cexpr MK_RPAREN
   52        | OP_MINUS CONST
   53        | OP_MINUS MK_LPAREN cexpr MK_RPAREN

   54 init_id_list: init_id
   55             | init_id_list MK_COMMA init_id

   56 init_id: ID
   57        | ID dim_decl
   58        | ID OP_ASSIGN relop_expr

   59 stmt_list: stmt_list stmt
   60          | stmt

   61 stmt: MK_LBRACE block MK_RBRACE
   62     | WHILE MK_LPAREN test MK_RPAREN stmt
   63     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   64     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   65     | IF MK_LPAREN test MK_RPAREN stmt
   66     | IF MK_LPAREN test MK_RPAREN stmt ELSE stmt
   67     | ID MK_LPAREN relop_expr_list MK_RPAREN MK_SEMICOLON
   68     | MK_SEMICOLON
   69     | RETURN MK_SEMICOLON
   70     | RETURN relop_expr MK_SEMICOLON

   71 assign_expr_list: nonempty_assign_expr_list
   72                 | %empty

   73 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   74                          | assign_expr

   75 test: assign_expr

   76 assign_expr: ID OP_ASSIGN relop_expr
   77            | relop_expr

   78 relop_expr: relop_term
   79           | relop_expr OP_OR relop_term

   80 relop_term: relop_factor
   81           | relop_term OP_AND relop_factor

   82 relop_factor: expr
   83             | expr rel_op expr

   84 rel_op: OP_EQ
   85       | OP_GE
   86       | OP_LE
   87       | OP_NE
   88       | OP_GT
   89       | OP_LT

   90 relop_expr_list: nonempty_relop_expr_list
   91                | %empty

   92 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
   93                         | relop_expr

   94 expr: expr add_op term
   95     | term

   96 add_op: OP_PLUS
   97       | OP_MINUS

   98 term: term mul_op factor
   99     | factor

  100 mul_op: OP_TIMES
  101       | OP_DIVIDE

  102 factor: MK_LPAREN relop_expr MK_RPAREN
  103       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
  104       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
  105       | CONST
  106       | OP_MINUS CONST
  107       | OP_NOT CONST
  108       | ID MK_LPAREN relop_expr_list MK_RPAREN
  109       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  110       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  111       | var_ref
  112       | OP_MINUS var_ref
  113       | OP_NOT var_ref

  114 var_ref: ID
  115        | ID dim_list

  116 dim_list: dim_list MK_LB expr MK_RB
  117         | MK_LB expr MK_RB


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <lexeme> (258) 7 8 9 10 11 12 15 16 17 18 33 35 38 39 40 41 56 57 58 67 76 108 109 110 114 115
    CONST <const1> (259) 50 52 105 106 107
    VOID (260) 8 11 32
    INT (261) 36
    FLOAT (262) 37
    IF (263) 65 66
    ELSE (264) 66
    WHILE (265) 62
    FOR (266) 63
    TYPEDEF (267) 31 32 33
    OP_ASSIGN (268) 58 64 76
    OP_OR (269) 79
    OP_AND (270) 81
    OP_NOT (271) 104 107 110 113
    OP_EQ (272) 84
    OP_NE (273) 87
    OP_GT (274) 88
    OP_LT (275) 89
    OP_GE (276) 85
    OP_LE (277) 86
    OP_PLUS (278) 44 96
    OP_MINUS (279) 45 52 53 97 103 106 109 112
    OP_TIMES (280) 47 100
    OP_DIVIDE (281) 48 101
    MK_LB (282) 19 20 42 43 116 117
    MK_RB (283) 19 20 42 43 116 117
    MK_LPAREN (284) 7 8 9 10 11 12 51 53 62 63 65 66 67 102 103 104 108 109 110
    MK_RPAREN (285) 7 8 9 10 11 12 51 53 62 63 65 66 67 102 103 104 108 109 110
    MK_LBRACE (286) 7 8 9 10 11 12 61
    MK_RBRACE (287) 7 8 9 10 11 12 61
    MK_COMMA (288) 13 39 40 55 73 92
    MK_SEMICOLON (289) 31 32 33 34 35 63 64 67 68 69 70
    MK_DOT (290)
    ERROR (291)
    RETURN (292) 69 70


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program <node> (39)
        on left: 1 2
        on right: 0
    global_decl_list <node> (40)
        on left: 3 4
        on right: 1 3
    global_decl <node> (41)
        on left: 5 6
        on right: 3 4
    function_decl <node> (42)
        on left: 7 8 9 10 11 12
        on right: 5 6
    param_list <node> (43)
        on left: 13 14
        on right: 7 8 9 13
    param <node> (44)
        on left: 15 16 17 18
        on right: 13 14
    dim_fn <node> (45)
        on left: 19 20
        on right: 17 18 20
    expr_null <node> (46)
        on left: 21 22
        on right: 19
    block <node> (47)
        on left: 23 24 25 26
        on right: 7 8 9 10 11 12 61
    decl_list <node> (48)
        on left: 27 28
        on right: 5 23 25 27
    decl <node> (49)
        on left: 29 30
        on right: 27 28
    type_decl <node> (50)
        on left: 31 32 33
        on right: 29
    var_decl <node> (51)
        on left: 34 35
        on right: 30
    type <node> (52)
        on left: 36 37
        on right: 7 10 15 17 31 34
    id_list <node> (53)
        on left: 38 39 40 41
        on right: 31 32 33 39 40
    dim_decl <node> (54)
        on left: 42 43
        on right: 40 41 43 57
    cexpr <node> (55)
        on left: 44 45 46
        on right: 42 43 44 45 51 53
    mcexpr <node> (56)
        on left: 47 48 49
        on right: 44 45 46 47 48
    cfactor <node> (57)
        on left: 50 51 52 53
        on right: 47 48 49
    init_id_list <node> (58)
        on left: 54 55
        on right: 34 35 55
    init_id <node> (59)
        on left: 56 57 58
        on right: 54 55
    stmt_list <node> (60)
        on left: 59 60
        on right: 23 24 59
    stmt <node> (61)
        on left: 61 62 63 64 65 66 67 68 69 70
        on right: 59 60 62 63 65 66
    assign_expr_list <node> (62)
        on left: 71 72
        on right: 63
    nonempty_assign_expr_list <node> (63)
        on left: 73 74
        on right: 71 73
    test <node> (64)
        on left: 75
        on right: 62 65 66
    assign_expr <node> (65)
        on left: 76 77
        on right: 73 74 75
    relop_expr <node> (66)
        on left: 78 79
        on right: 58 64 70 76 77 79 92 93 102 103 104
    relop_term <node> (67)
        on left: 80 81
        on right: 78 79 81
    relop_factor <node> (68)
        on left: 82 83
        on right: 80 81
    rel_op <node> (69)
        on left: 84 85 86 87 88 89
        on right: 83
    relop_expr_list <node> (70)
        on left: 90 91
        on right: 63 67 108 109 110
    nonempty_relop_expr_list <node> (71)
        on left: 92 93
        on right: 90 92
    expr <node> (72)
        on left: 94 95
        on right: 20 21 82 83 94 116 117
    add_op <node> (73)
        on left: 96 97
        on right: 94
    term <node> (74)
        on left: 98 99
        on right: 94 95 98
    mul_op <node> (75)
        on left: 100 101
        on right: 98
    factor <node> (76)
        on left: 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 98 99
    var_ref <node> (77)
        on left: 114 115
        on right: 64 111 112 113
    dim_list <node> (78)
        on left: 116 117
        on right: 115 116


State 0

    0 $accept: • program $end

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 2 (program)

    program           go to state 6
    global_decl_list  go to state 7
    global_decl       go to state 8
    function_decl     go to state 9
    decl_list         go to state 10
    decl              go to state 11
    type_decl         go to state 12
    var_decl          go to state 13
    type              go to state 14


State 1

    9 function_decl: ID • ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID • ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   35 var_decl: ID • init_id_list MK_SEMICOLON

    ID  shift, and go to state 15

    init_id_list  go to state 16
    init_id       go to state 17


State 2

    8 function_decl: VOID • ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID • ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    ID  shift, and go to state 18


State 3

   36 type: INT •

    $default  reduce using rule 36 (type)


State 4

   37 type: FLOAT •

    $default  reduce using rule 37 (type)


State 5

   31 type_decl: TYPEDEF • type id_list MK_SEMICOLON
   32          | TYPEDEF • VOID id_list MK_SEMICOLON
   33          | TYPEDEF • ID id_list MK_SEMICOLON

    ID     shift, and go to state 19
    VOID   shift, and go to state 20
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    type  go to state 21


State 6

    0 $accept: program • $end

    $end  shift, and go to state 22


State 7

    1 program: global_decl_list •
    3 global_decl_list: global_decl_list • global_decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 1 (program)

    global_decl    go to state 23
    function_decl  go to state 9
    decl_list      go to state 10
    decl           go to state 11
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 8

    4 global_decl_list: global_decl •

    $default  reduce using rule 4 (global_decl_list)


State 9

    6 global_decl: function_decl •

    $default  reduce using rule 6 (global_decl)


State 10

    5 global_decl: decl_list • function_decl
   27 decl_list: decl_list • decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    function_decl  go to state 24
    decl           go to state 25
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 11

   28 decl_list: decl •

    $default  reduce using rule 28 (decl_list)


State 12

   29 decl: type_decl •

    $default  reduce using rule 29 (decl)


State 13

   30 decl: var_decl •

    $default  reduce using rule 30 (decl)


State 14

    7 function_decl: type • ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type • ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   34 var_decl: type • init_id_list MK_SEMICOLON

    ID  shift, and go to state 26

    init_id_list  go to state 27
    init_id       go to state 17


State 15

    9 function_decl: ID ID • MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID • MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   56 init_id: ID •
   57        | ID • dim_decl
   58        | ID • OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 28
    MK_LB      shift, and go to state 29
    MK_LPAREN  shift, and go to state 30

    $default  reduce using rule 56 (init_id)

    dim_decl  go to state 31


State 16

   35 var_decl: ID init_id_list • MK_SEMICOLON
   55 init_id_list: init_id_list • MK_COMMA init_id

    MK_COMMA      shift, and go to state 32
    MK_SEMICOLON  shift, and go to state 33


State 17

   54 init_id_list: init_id •

    $default  reduce using rule 54 (init_id_list)


State 18

    8 function_decl: VOID ID • MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID • MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    MK_LPAREN  shift, and go to state 34


State 19

   33 type_decl: TYPEDEF ID • id_list MK_SEMICOLON

    ID  shift, and go to state 35

    id_list  go to state 36


State 20

   32 type_decl: TYPEDEF VOID • id_list MK_SEMICOLON

    ID  shift, and go to state 35

    id_list  go to state 37


State 21

   31 type_decl: TYPEDEF type • id_list MK_SEMICOLON

    ID  shift, and go to state 35

    id_list  go to state 38


State 22

    0 $accept: program $end •

    $default  accept


State 23

    3 global_decl_list: global_decl_list global_decl •

    $default  reduce using rule 3 (global_decl_list)


State 24

    5 global_decl: decl_list function_decl •

    $default  reduce using rule 5 (global_decl)


State 25

   27 decl_list: decl_list decl •

    $default  reduce using rule 27 (decl_list)


State 26

    7 function_decl: type ID • MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID • MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   56 init_id: ID •
   57        | ID • dim_decl
   58        | ID • OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 28
    MK_LB      shift, and go to state 29
    MK_LPAREN  shift, and go to state 39

    $default  reduce using rule 56 (init_id)

    dim_decl  go to state 31


State 27

   34 var_decl: type init_id_list • MK_SEMICOLON
   55 init_id_list: init_id_list • MK_COMMA init_id

    MK_COMMA      shift, and go to state 32
    MK_SEMICOLON  shift, and go to state 40


State 28

   58 init_id: ID OP_ASSIGN • relop_expr

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_expr    go to state 46
    relop_term    go to state 47
    relop_factor  go to state 48
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 29

   42 dim_decl: MK_LB • cexpr MK_RB

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    cexpr    go to state 56
    mcexpr   go to state 57
    cfactor  go to state 58


State 30

    9 function_decl: ID ID MK_LPAREN • param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID MK_LPAREN • MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 59
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 60

    param_list  go to state 61
    param       go to state 62
    type        go to state 63


State 31

   43 dim_decl: dim_decl • MK_LB cexpr MK_RB
   57 init_id: ID dim_decl •

    MK_LB  shift, and go to state 64

    $default  reduce using rule 57 (init_id)


State 32

   55 init_id_list: init_id_list MK_COMMA • init_id

    ID  shift, and go to state 65

    init_id  go to state 66


State 33

   35 var_decl: ID init_id_list MK_SEMICOLON •

    $default  reduce using rule 35 (var_decl)


State 34

    8 function_decl: VOID ID MK_LPAREN • param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID MK_LPAREN • MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 59
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 67

    param_list  go to state 68
    param       go to state 62
    type        go to state 63


State 35

   38 id_list: ID •
   41        | ID • dim_decl

    MK_LB  shift, and go to state 29

    $default  reduce using rule 38 (id_list)

    dim_decl  go to state 69


State 36

   33 type_decl: TYPEDEF ID id_list • MK_SEMICOLON
   39 id_list: id_list • MK_COMMA ID
   40        | id_list • MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 70
    MK_SEMICOLON  shift, and go to state 71


State 37

   32 type_decl: TYPEDEF VOID id_list • MK_SEMICOLON
   39 id_list: id_list • MK_COMMA ID
   40        | id_list • MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 70
    MK_SEMICOLON  shift, and go to state 72


State 38

   31 type_decl: TYPEDEF type id_list • MK_SEMICOLON
   39 id_list: id_list • MK_COMMA ID
   40        | id_list • MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 70
    MK_SEMICOLON  shift, and go to state 73


State 39

    7 function_decl: type ID MK_LPAREN • param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID MK_LPAREN • MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 59
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 74

    param_list  go to state 75
    param       go to state 62
    type        go to state 63


State 40

   34 var_decl: type init_id_list MK_SEMICOLON •

    $default  reduce using rule 34 (var_decl)


State 41

  108 factor: ID • MK_LPAREN relop_expr_list MK_RPAREN
  114 var_ref: ID •
  115        | ID • dim_list

    MK_LB      shift, and go to state 76
    MK_LPAREN  shift, and go to state 77

    $default  reduce using rule 114 (var_ref)

    dim_list  go to state 78


State 42

  105 factor: CONST •

    $default  reduce using rule 105 (factor)


State 43

  104 factor: OP_NOT • MK_LPAREN relop_expr MK_RPAREN
  107       | OP_NOT • CONST
  110       | OP_NOT • ID MK_LPAREN relop_expr_list MK_RPAREN
  113       | OP_NOT • var_ref

    ID         shift, and go to state 79
    CONST      shift, and go to state 80
    MK_LPAREN  shift, and go to state 81

    var_ref  go to state 82


State 44

  103 factor: OP_MINUS • MK_LPAREN relop_expr MK_RPAREN
  106       | OP_MINUS • CONST
  109       | OP_MINUS • ID MK_LPAREN relop_expr_list MK_RPAREN
  112       | OP_MINUS • var_ref

    ID         shift, and go to state 83
    CONST      shift, and go to state 84
    MK_LPAREN  shift, and go to state 85

    var_ref  go to state 86


State 45

  102 factor: MK_LPAREN • relop_expr MK_RPAREN

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_expr    go to state 87
    relop_term    go to state 47
    relop_factor  go to state 48
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 46

   58 init_id: ID OP_ASSIGN relop_expr •
   79 relop_expr: relop_expr • OP_OR relop_term

    OP_OR  shift, and go to state 88

    $default  reduce using rule 58 (init_id)


State 47

   78 relop_expr: relop_term •
   81 relop_term: relop_term • OP_AND relop_factor

    OP_AND  shift, and go to state 89

    $default  reduce using rule 78 (relop_expr)


State 48

   80 relop_term: relop_factor •

    $default  reduce using rule 80 (relop_term)


State 49

   82 relop_factor: expr •
   83             | expr • rel_op expr
   94 expr: expr • add_op term

    OP_EQ     shift, and go to state 90
    OP_NE     shift, and go to state 91
    OP_GT     shift, and go to state 92
    OP_LT     shift, and go to state 93
    OP_GE     shift, and go to state 94
    OP_LE     shift, and go to state 95
    OP_PLUS   shift, and go to state 96
    OP_MINUS  shift, and go to state 97

    $default  reduce using rule 82 (relop_factor)

    rel_op  go to state 98
    add_op  go to state 99


State 50

   95 expr: term •
   98 term: term • mul_op factor

    OP_TIMES   shift, and go to state 100
    OP_DIVIDE  shift, and go to state 101

    $default  reduce using rule 95 (expr)

    mul_op  go to state 102


State 51

   99 term: factor •

    $default  reduce using rule 99 (term)


State 52

  111 factor: var_ref •

    $default  reduce using rule 111 (factor)


State 53

   50 cfactor: CONST •

    $default  reduce using rule 50 (cfactor)


State 54

   52 cfactor: OP_MINUS • CONST
   53        | OP_MINUS • MK_LPAREN cexpr MK_RPAREN

    CONST      shift, and go to state 103
    MK_LPAREN  shift, and go to state 104


State 55

   51 cfactor: MK_LPAREN • cexpr MK_RPAREN

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    cexpr    go to state 105
    mcexpr   go to state 57
    cfactor  go to state 58


State 56

   42 dim_decl: MK_LB cexpr • MK_RB
   44 cexpr: cexpr • OP_PLUS mcexpr
   45      | cexpr • OP_MINUS mcexpr

    OP_PLUS   shift, and go to state 106
    OP_MINUS  shift, and go to state 107
    MK_RB     shift, and go to state 108


State 57

   46 cexpr: mcexpr •
   47 mcexpr: mcexpr • OP_TIMES cfactor
   48       | mcexpr • OP_DIVIDE cfactor

    OP_TIMES   shift, and go to state 109
    OP_DIVIDE  shift, and go to state 110

    $default  reduce using rule 46 (cexpr)


State 58

   49 mcexpr: cfactor •

    $default  reduce using rule 49 (mcexpr)


State 59

   16 param: ID • ID
   18      | ID • ID dim_fn

    ID  shift, and go to state 111


State 60

   12 function_decl: ID ID MK_LPAREN MK_RPAREN • MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 112


State 61

    9 function_decl: ID ID MK_LPAREN param_list • MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list • MK_COMMA param

    MK_RPAREN  shift, and go to state 113
    MK_COMMA   shift, and go to state 114


State 62

   14 param_list: param •

    $default  reduce using rule 14 (param_list)


State 63

   15 param: type • ID
   17      | type • ID dim_fn

    ID  shift, and go to state 115


State 64

   43 dim_decl: dim_decl MK_LB • cexpr MK_RB

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    cexpr    go to state 116
    mcexpr   go to state 57
    cfactor  go to state 58


State 65

   56 init_id: ID •
   57        | ID • dim_decl
   58        | ID • OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 28
    MK_LB      shift, and go to state 29

    $default  reduce using rule 56 (init_id)

    dim_decl  go to state 31


State 66

   55 init_id_list: init_id_list MK_COMMA init_id •

    $default  reduce using rule 55 (init_id_list)


State 67

   11 function_decl: VOID ID MK_LPAREN MK_RPAREN • MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 117


State 68

    8 function_decl: VOID ID MK_LPAREN param_list • MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list • MK_COMMA param

    MK_RPAREN  shift, and go to state 118
    MK_COMMA   shift, and go to state 114


State 69

   41 id_list: ID dim_decl •
   43 dim_decl: dim_decl • MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 64

    $default  reduce using rule 41 (id_list)


State 70

   39 id_list: id_list MK_COMMA • ID
   40        | id_list MK_COMMA • ID dim_decl

    ID  shift, and go to state 119


State 71

   33 type_decl: TYPEDEF ID id_list MK_SEMICOLON •

    $default  reduce using rule 33 (type_decl)


State 72

   32 type_decl: TYPEDEF VOID id_list MK_SEMICOLON •

    $default  reduce using rule 32 (type_decl)


State 73

   31 type_decl: TYPEDEF type id_list MK_SEMICOLON •

    $default  reduce using rule 31 (type_decl)


State 74

   10 function_decl: type ID MK_LPAREN MK_RPAREN • MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 120


State 75

    7 function_decl: type ID MK_LPAREN param_list • MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list • MK_COMMA param

    MK_RPAREN  shift, and go to state 121
    MK_COMMA   shift, and go to state 114


State 76

  117 dim_list: MK_LB • expr MK_RB

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    expr     go to state 122
    term     go to state 50
    factor   go to state 51
    var_ref  go to state 52


State 77

  108 factor: ID MK_LPAREN • relop_expr_list MK_RPAREN

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    $default  reduce using rule 91 (relop_expr_list)

    relop_expr                go to state 123
    relop_term                go to state 47
    relop_factor              go to state 48
    relop_expr_list           go to state 124
    nonempty_relop_expr_list  go to state 125
    expr                      go to state 49
    term                      go to state 50
    factor                    go to state 51
    var_ref                   go to state 52


State 78

  115 var_ref: ID dim_list •
  116 dim_list: dim_list • MK_LB expr MK_RB

    MK_LB  shift, and go to state 126

    $default  reduce using rule 115 (var_ref)


State 79

  110 factor: OP_NOT ID • MK_LPAREN relop_expr_list MK_RPAREN
  114 var_ref: ID •
  115        | ID • dim_list

    MK_LB      shift, and go to state 76
    MK_LPAREN  shift, and go to state 127

    $default  reduce using rule 114 (var_ref)

    dim_list  go to state 78


State 80

  107 factor: OP_NOT CONST •

    $default  reduce using rule 107 (factor)


State 81

  104 factor: OP_NOT MK_LPAREN • relop_expr MK_RPAREN

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_expr    go to state 128
    relop_term    go to state 47
    relop_factor  go to state 48
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 82

  113 factor: OP_NOT var_ref •

    $default  reduce using rule 113 (factor)


State 83

  109 factor: OP_MINUS ID • MK_LPAREN relop_expr_list MK_RPAREN
  114 var_ref: ID •
  115        | ID • dim_list

    MK_LB      shift, and go to state 76
    MK_LPAREN  shift, and go to state 129

    $default  reduce using rule 114 (var_ref)

    dim_list  go to state 78


State 84

  106 factor: OP_MINUS CONST •

    $default  reduce using rule 106 (factor)


State 85

  103 factor: OP_MINUS MK_LPAREN • relop_expr MK_RPAREN

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_expr    go to state 130
    relop_term    go to state 47
    relop_factor  go to state 48
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 86

  112 factor: OP_MINUS var_ref •

    $default  reduce using rule 112 (factor)


State 87

   79 relop_expr: relop_expr • OP_OR relop_term
  102 factor: MK_LPAREN relop_expr • MK_RPAREN

    OP_OR      shift, and go to state 88
    MK_RPAREN  shift, and go to state 131


State 88

   79 relop_expr: relop_expr OP_OR • relop_term

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_term    go to state 132
    relop_factor  go to state 48
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 89

   81 relop_term: relop_term OP_AND • relop_factor

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    relop_factor  go to state 133
    expr          go to state 49
    term          go to state 50
    factor        go to state 51
    var_ref       go to state 52


State 90

   84 rel_op: OP_EQ •

    $default  reduce using rule 84 (rel_op)


State 91

   87 rel_op: OP_NE •

    $default  reduce using rule 87 (rel_op)


State 92

   88 rel_op: OP_GT •

    $default  reduce using rule 88 (rel_op)


State 93

   89 rel_op: OP_LT •

    $default  reduce using rule 89 (rel_op)


State 94

   85 rel_op: OP_GE •

    $default  reduce using rule 85 (rel_op)


State 95

   86 rel_op: OP_LE •

    $default  reduce using rule 86 (rel_op)


State 96

   96 add_op: OP_PLUS •

    $default  reduce using rule 96 (add_op)


State 97

   97 add_op: OP_MINUS •

    $default  reduce using rule 97 (add_op)


State 98

   83 relop_factor: expr rel_op • expr

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    expr     go to state 134
    term     go to state 50
    factor   go to state 51
    var_ref  go to state 52


State 99

   94 expr: expr add_op • term

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    term     go to state 135
    factor   go to state 51
    var_ref  go to state 52


State 100

  100 mul_op: OP_TIMES •

    $default  reduce using rule 100 (mul_op)


State 101

  101 mul_op: OP_DIVIDE •

    $default  reduce using rule 101 (mul_op)


State 102

   98 term: term mul_op • factor

    ID         shift, and go to state 41
    CONST      shift, and go to state 42
    OP_NOT     shift, and go to state 43
    OP_MINUS   shift, and go to state 44
    MK_LPAREN  shift, and go to state 45

    factor   go to state 136
    var_ref  go to state 52


State 103

   52 cfactor: OP_MINUS CONST •

    $default  reduce using rule 52 (cfactor)


State 104

   53 cfactor: OP_MINUS MK_LPAREN • cexpr MK_RPAREN

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    cexpr    go to state 137
    mcexpr   go to state 57
    cfactor  go to state 58


State 105

   44 cexpr: cexpr • OP_PLUS mcexpr
   45      | cexpr • OP_MINUS mcexpr
   51 cfactor: MK_LPAREN cexpr • MK_RPAREN

    OP_PLUS    shift, and go to state 106
    OP_MINUS   shift, and go to state 107
    MK_RPAREN  shift, and go to state 138


State 106

   44 cexpr: cexpr OP_PLUS • mcexpr

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    mcexpr   go to state 139
    cfactor  go to state 58


State 107

   45 cexpr: cexpr OP_MINUS • mcexpr

    CONST      shift, and go to state 53
    OP_MINUS   shift, and go to state 54
    MK_LPAREN  shift, and go to state 55

    mcexpr   go to state 140
    cfactor  go to state 58


State 108

   42 dim_decl: MK_LB cexpr MK_RB •

    $default  reduce using rule 42 (dim_decl)


State 109

   47 mcexpr: mcexpr OP_TIMES • cfactor
